name:                safe-printf
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII <konn.jinro_at_gmail.com>
maintainer:          Hiromi ISHII <konn.jinro_at_gmail.com>
copyright:           (c) Hiromi ISHII 2015
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  -- location: git://github.com/konn/safe-printf.git

library
  exposed-modules:     Text.Printf.Safe
  -- other-modules:       Text.Printf.Safe.Internal
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  Main-is:              Spec.hs
  build-depends:        base
               ,        hspec
               ,        QuickCheck
               ,        safe-printf
